test/spec/store_retval.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/store_retval.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:2:11: type stack size too small at function. got 0, expected at least 1
  (module (func (param i32) (result i32) (set_local 0 (i32.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:2:11: type stack at end of function is 0. expected 1
  (module (func (param i32) (result i32) (set_local 0 (i32.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:6:11: type stack size too small at function. got 0, expected at least 1
  (module (func (param i64) (result i64) (set_local 0 (i64.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:6:11: type stack at end of function is 0. expected 1
  (module (func (param i64) (result i64) (set_local 0 (i64.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:10:11: type stack size too small at function. got 0, expected at least 1
  (module (func (param f32) (result f32) (set_local 0 (f32.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:10:11: type stack at end of function is 0. expected 1
  (module (func (param f32) (result f32) (set_local 0 (f32.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:14:11: type stack size too small at function. got 0, expected at least 1
  (module (func (param f64) (result f64) (set_local 0 (f64.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:14:11: type stack at end of function is 0. expected 1
  (module (func (param f64) (result f64) (set_local 0 (f64.const 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:19:22: type stack size too small at function. got 0, expected at least 1
...y 1) (func (param i32) (result i32) (i32.store (i32.const 0) (i32.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:19:22: type stack at end of function is 0. expected 1
...y 1) (func (param i32) (result i32) (i32.store (i32.const 0) (i32.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:23:22: type stack size too small at function. got 0, expected at least 1
...y 1) (func (param i64) (result i64) (i64.store (i32.const 0) (i64.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:23:22: type stack at end of function is 0. expected 1
...y 1) (func (param i64) (result i64) (i64.store (i32.const 0) (i64.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:27:22: type stack size too small at function. got 0, expected at least 1
...y 1) (func (param f32) (result f32) (f32.store (i32.const 0) (f32.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:27:22: type stack at end of function is 0. expected 1
...y 1) (func (param f32) (result f32) (f32.store (i32.const 0) (f32.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:31:22: type stack size too small at function. got 0, expected at least 1
...y 1) (func (param f64) (result f64) (f64.store (i32.const 0) (f64.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:31:22: type stack at end of function is 0. expected 1
...y 1) (func (param f64) (result f64) (f64.store (i32.const 0) (f64.const 1))))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:36:22: type stack size too small at function. got 0, expected at least 1
... 1) (func (param i32) (result i32) (i32.store8 (i32.const 0) (i32.const 1))))
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:36:22: type stack at end of function is 0. expected 1
... 1) (func (param i32) (result i32) (i32.store8 (i32.const 0) (i32.const 1))))
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:40:22: type stack size too small at function. got 0, expected at least 1
...1) (func (param i32) (result i32) (i32.store16 (i32.const 0) (i32.const 1))))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:40:22: type stack at end of function is 0. expected 1
...1) (func (param i32) (result i32) (i32.store16 (i32.const 0) (i32.const 1))))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:44:22: type stack size too small at function. got 0, expected at least 1
... 1) (func (param i64) (result i64) (i64.store8 (i32.const 0) (i64.const 1))))
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:44:22: type stack at end of function is 0. expected 1
... 1) (func (param i64) (result i64) (i64.store8 (i32.const 0) (i64.const 1))))
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:48:22: type stack size too small at function. got 0, expected at least 1
...1) (func (param i64) (result i64) (i64.store16 (i32.const 0) (i64.const 1))))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:48:22: type stack at end of function is 0. expected 1
...1) (func (param i64) (result i64) (i64.store16 (i32.const 0) (i64.const 1))))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:52:22: type stack size too small at function. got 0, expected at least 1
...1) (func (param i64) (result i64) (i64.store32 (i32.const 0) (i64.const 1))))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/store_retval.wast:52:22: type stack at end of function is 0. expected 1
...1) (func (param i64) (result i64) (i64.store32 (i32.const 0) (i64.const 1))))
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
0/0 tests passed.
;;; STDOUT ;;)
